--- a/src/stylesheets/scss/base/_typography.scss
+++ b/src/stylesheets/scss/base/_typography.scss
@@ -3,8 +3,7 @@
     line-height: 1.5;
 }
 
-h1,
-h2 {
+h1 {
     font-family: 'Bungee Shade';
 }
 
