--- a/src/stylesheets/scss/layout/_main-section.scss
+++ b/src/stylesheets/scss/layout/_main-section.scss
@@ -23,6 +23,7 @@
                 background: linear-gradient(0deg, $secondary-color 25%, $primary-color 60%);
                 background-clip: text;
                 -webkit-text-fill-color: transparent;
+                font-family: 'Bungee Shade';
                 font-size: 3rem;
 
                 &::after,
