--- a/src/stylesheets/scss/section/_hero-section.scss
+++ b/src/stylesheets/scss/section/_hero-section.scss
@@ -30,7 +30,11 @@
 
         #role {
             font-size: 2.5rem;
-            color: $secondary-color
+
+            span {
+                font-family: 'Bungee Shade';
+                color: $secondary-color;
+            }
         }
 
         #intro {
@@ -315,7 +319,7 @@
 
                 #call-to-action-button {
                     padding: 0.4rem;
-                    
+
                     .button-content {
                         padding: 0.8rem;
                         font-size: 1.2rem;
